# diy-ir-remote

./: Cargo.toml  README.md  Sketch.fzz  flake.nix
examples/: emit.rs  receive.rs
src/: are_all_equal.rs  events.rs  is_around.rs  lib.rs  main.rs
src/ir_signal/: decode.rs  encode.rs  mod.rs
