[package]
name = "ir-remote"
description = "Create a programatic IR remote to control devices"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ChocolateLoverRaj/diy-ir-remote"
license-file = "LICENSE"
exclude = ["flake.nix", "flake.lock"]

[dependencies]
anyhow = "1.0.86"
bitvec = "1.0.1"

[dev-dependencies]
ordered_hash_map = "0.4.0"
promptuity = "0.0.5"
rppal = "0.18.0"
simple-signal = "1.1.1"
spin_sleep = "1.2.0"
